# novax

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml  novax.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/novax-app/: Cargo.toml
apps/novax-app/src/: main.rs
crates/novax/: Cargo.toml
crates/novax-auth/: Cargo.toml
crates/novax-auth/src/: lib.rs  oauth.rs  tokens.rs
crates/novax-cli/: Cargo.toml
crates/novax-cli/src/: main.rs
crates/novax-compiler/: Cargo.toml
crates/novax-compiler/src/: html_codegen.rs  lib.rs  openapi_codegen.rs  project_builder.rs  rust_codegen.rs  sql_codegen.rs
crates/novax-core/: Cargo.toml
crates/novax-core/src/: entity.rs  field.rs  field_config.rs  lib.rs  project.rs  templates.rs  theme.rs
crates/novax-macros/: Cargo.toml
crates/novax-macros/src/: lib.rs
crates/novax-mail/: Cargo.toml
crates/novax-mail/src/: lib.rs
crates/novax-migrate/: Cargo.toml
crates/novax-migrate/src/: lib.rs
crates/novax-network/: Cargo.toml
crates/novax-network/src/: lib.rs
crates/novax-observability/: Cargo.toml
crates/novax-observability/src/: lib.rs
crates/novax-orm/: Cargo.toml
crates/novax-orm/src/: lib.rs
crates/novax-rate-limit/: Cargo.toml
crates/novax-rate-limit/src/: lib.rs
crates/novax-router/: Cargo.toml
crates/novax-router/src/: lib.rs
crates/novax-runtime/: Cargo.toml
crates/novax-runtime/src/: lib.rs
crates/novax-seo/: Cargo.toml
crates/novax-seo/src/: lib.rs
crates/novax-storage/: Cargo.toml
crates/novax-storage/src/: lib.rs  memory.rs  postgres.rs
crates/novax-web/: Cargo.toml
crates/novax-web/src/: landing.rs  lib.rs  render.rs  templates.rs
crates/novax/src/: app.rs  config.rs  db.rs  lib.rs  prelude.rs
docs/: architecture.md
migrations/: 001_create_users.sql  002_create_posts.sql  003_add_auth.sql  004_add_auth_features.sql  005_uuid_seo_audit.sql  006_create_projects.sql
static/: index.html
