[package]
name = "novax-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX authentication: JWT, sessions, password hashing"
repository.workspace = true

[features]
default = ["postgres"]
postgres = ["dep:sqlx"]

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, optional = true }
chrono = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

# Crypto dependencies (justified: required for password hashing + JWT)
argon2 = "0.5"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
subtle = "2.6"
