[package]
name = "novax-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX command-line interface"
repository.workspace = true

[[bin]]
name = "novax"
path = "src/main.rs"

[dependencies]
novax = { workspace = true }
novax-runtime = { workspace = true }
novax-observability = { workspace = true }
novax-network = { workspace = true }

clap = { version = "4.5", features = ["derive", "env"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
