[package]
name = "novax-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX Compiler — generates Rust + HTML + SQL + CSS from entity configs"
repository.workspace = true

[dependencies]
novax-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
