[package]
name = "novax-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX Core — domain models for the Intent-Driven Application Generator"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
