[package]
name = "novax-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX procedural macros"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
