[package]
name = "novax-mail"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX mail service: SMTP email sending for verification + password reset"
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
lettre = { workspace = true }
