[package]
name = "novax-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX migration engine with rollback support"
repository.workspace = true

[features]
default = ["postgres"]
postgres = ["dep:sqlx"]

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, optional = true }
chrono = { workspace = true }
