[package]
name = "novax-network"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX networking layer: HTTP/1, HTTP/2, WebSocket, SSE"
repository.workspace = true

[dependencies]
novax-runtime = { workspace = true }
novax-observability = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
