[package]
name = "novax-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX observability: structured logging, metrics, tracing"
repository.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
