[package]
name = "novax-orm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX ORM — strongly-typed database queries"
repository.workspace = true

[features]
default = ["postgres"]
postgres = ["novax-storage/postgres", "dep:sqlx"]

[dependencies]
novax-storage = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, optional = true }
chrono = { workspace = true }
uuid = { workspace = true }
