[package]
name = "novax-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX async runtime with work-stealing scheduler (built on tokio for v0.1)"
repository.workspace = true

[dependencies]
tokio = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
