[package]
name = "novax-seo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX SEO: meta tags, sitemap, robots.txt, structured data"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
