[package]
name = "novax-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX unified storage layer with multi-backend support"
repository.workspace = true

[dependencies]
novax-observability = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
