[package]
name = "novax-web"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "NovaX web UI: server-rendered HTML pages for auth + admin dashboard"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
